<resources>
    <string name="app_name">Intelligent Reminder</string>
    <string name="app_title">Intelligent Reminder %1$s</string>
    <string name="ineed2pay_ccnbr">Card number</string>
    <string name="register">Register</string>
    <string name="ineed2pay_expmo">Expiration month</string>
    <string name="ineed2pay_expyear">Year</string>
    <string name="ineed2pay_address">Address</string>
    <string name="ineed2pay_city">City</string>
    <string name="ineed2pay_state">State</string>
    <string name="ineed2pay_postalcode">Postal code</string>
    <string name="ineed2pay_country">Country</string>
    <string name="defaultvoicenotification_title">Need Voice Notifications</string>
    <string name="defaultvoicenotification_summary">Need reminders are spoken. You will still receive regular Android notifications.</string>
    <string name="defaultpopupnotification_title">Need Popup Notifications</string>
    <string name="defaultpopupnotification_summary">Need reminders invoke a popup. You will still receive regular Android notifications.</string>
    <string name="securely_pay">Pay Securely ($1.99) for immediate unlocking of Trial version</string>
    <string name="billing_info">Billing information</string>
    <string name="ineed2pay_expyear_example"> (ex: 2012)</string>
    <string name="ineed2pay_ccid">Card ID</string>
    <string name="ineed2pay_nameoncard">Name on card</string>
    <string name="no_locations">No locations!</string>
    <string name="no_needs">No needs!</string>
    <string name="no_history">No history!</string>
    <string name="ihavelocations_menu_addlocation">Location</string>
    <string name="ihavelocations_menu_businesssearch">From Businesses</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete">Delete Location</string>
    <string name="menu_edit">Edit Location</string>
    <string name="menu_map">Map Location</string>
    <string name="menu_delete_need">Delete Need</string>
    <string name="menu_edit_need">Edit Need</string>
    <string name="location_title">Name:</string>
    <string name="company_name">Company:</string>
    <string name="company_autocomplete_hint">Typing * to show all Companies</string>
    <string name="address">Descriptive Location (opt)</string>
    <string name="address_label">Address:</string>
    <string name="indeedtopay">market://details?id=com.mibr.android.intelligentreminder</string>
    <string name="indeedtopayforservice">market://details?id=com.mibr.android.remindercontacts</string>
    <string name="location_confirm">Confirm</string>
    <string name="location_cancel">Cancel</string>
    <string name="gpscoordinates">GPS Coordinates</string>
    <string name="latitude_label">Lat:</string>
    <string name="establish_location">Get GPS Coordinates</string>
    <string name="msg_cannoteditdeletecompany">This is a company. Cannot edit a company.</string>
    <string name="msg_cannotmapcompany">This is a company. Please drilldown and pick one of its Locations to map.</string>
    <string name="longitude_label">Long:</string>
    <string name="location_fill_from_current_loc">From here</string>
    <string name="location_fill_from_address">From Address -----></string>
    <string name="location_fill_from_contacts">Contacts</string>
    <string name="location_needsatthislocation">Needs at this Location</string>
    <string name="location_title_prompt">Name:</string>
    <string name="location_optional">Optional</string>
    <string name="location_address_hint">Address or intersection. Ex: 221 S Forest St Denver
		CO USA</string>
    <string name="error_unabletogetlocation">Unable to get current location from GPS.</string>
    <string name="error_locationprovidernotactive">GPS Location provider is not active.</string>
    <string name="error_namemustnotbeempty">Please supply a value in the Name field.</string>
    <string name="error_itemmustnotbeempty">Please supply a value in the Item field.</string>
    <string name="msg_ok">Okay</string>
    <string name="msg_no">No</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_register">Register</string>
    <string name="msg_cus">Email us</string>
    <string name="msg_locationcreated">Location successfully created.</string>
    <string name="msg_locationupdated">Location successfully updated.</string>
    <string name="msg_locationdeleted">Location successfully deleted.</string>
    <string name="msg_needdeleted">Need successfully deleted.</string>
    <string name="alert_thereareneedsassociatedwiththislocation">There are needs associated with this Location. Do you wish to proceed?</string>
    <string name="locations_company_label">Company:</string>
    <string name="locations_address_label">Address:</string>
    <string name="alert_areyousuredeletelocation">Are you sure you want to delete this Location?</string>
    <string name="alert_areyousuredeleteneed">Are you sure you want to delete this Need?</string>
    <string name="alert_foreignneeddeletetoo">This need came from a remote location. Do you want
		to delete it on the remote site, too?</string>
    <string name="notification_items_you_need_at">Location: </string>
    <string name="youveindicatgedneeds">You have needs at this location.</string>
    <string name="needs_notification_imonit">Clear - I\'m on it!</string>
    <string name="needs_notification_clearnotification">Leave - Clear Notification.</string>
    <string name="needs_notification_nolongerneedneed">Clear - No longer need.</string>
    <string name="menu_add_need">Add Need</string>
    <string name="menu_search_needs">Search Needs</string>
    <string name="prompt_item_name">Item:</string>
    <string name="prompt_location_name">Location:</string>
    <string name="item_autocomplete_hint">Type * to show all Items</string>
    <string name="need_view_description_prompt">Description:</string>
    <string name="need_view_description_hint">Optional</string>
    <string name="need_menu_addlocation">Existing Locations</string>
    <string name="need_menu_search_location">Search Location</string>
    <string name="msg_needUpdated">Need successfully updated</string>
    <string name="msg_needCreated">Need successfully created</string>
    <string name="needview_menu_delete_location">Delete Location</string>
    <string name="alert_areyousuredeleteneedviewlocation">Are you sure you want to remove this Location from
		this Need?</string>
    <string name="needview_menu_delete_company">Delete Company</string>
    <string name="needview_addlocation_dialog_title">Choose one or more Locations</string>
    <string name="needview_addcontact_dialog_title">Choose one or more Contacts</string>
    <string name="locations">Locations</string>
    <string name="locationsv2">Pick from Locations</string>
    <string name="contactsv2">Pick from Contacts</string>
    <string name="error_tryingtoaddneed_andnotlocations">You do not have any Locations defined. In order to
		add a Need you need at least one Location. Do you want to create a
		Location now?</string>
    <string name="location_add_hint">(Press a button below to add a Location)</string>
    <string name="need_search_location_title">Search Unused Location</string>
    <string name="search_locations_title">Unused Locations for</string>
    <string name="search_locations_title2">All Locations</string>
    <string name="search_location_screen_heading">Start by keying in first letter(s)</string>
    <string name="menu_application_preferences">Preferences</string>
    <string name="default_value_list_preference">200</string>
    <string name="default_logginglevel_value">3</string>
    <string name="default_gpsfrequency_value">1</string>
    <string name="title_list_preference">Location Distance</string>
    <string name="defaultlogging_title_list_preference">Logging Filter</string>
    <string name="defaultgpsfrequency_title_list_preference">GPS Frequency</string>
    <string name="defaultstartonreboot_title_list_preference">Start Automatically</string>
    <string name="summary_list_preference">Approximately how close do you want to be to a
		Location before receiving a notification?</string>
    <string name="logging_summary_list_preference">What level of trouble-shooting logging would you
		like?</string>
    <string name="gpsfrequency_summary_list_preference">Intelligent Reminder increases or decreases GPS activity depending
		on your current speed. For even more control, you can apply this setting.</string>
    <string name="startonreboot_summary_list_preference">With this setting on (recommended), the system will, when the phone is started, begin the necessary reminder background processes automatically.</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="logging_dialog_title_list_preference">Choose a logging level</string>
    <string name="gps_dialog_title_list_preference">Choose a GPS frequency level</string>
    <string name="fromdate">From:</string>
    <string name="throughdate">Through:</string>
    <string name="history_heading_date">Date Cleared</string>
    <string name="history_heading_item">Item</string>
    <string name="history_heading_description">Description</string>
    <string name="history_heading_location">Location</string>
    <string name="go">Go</string>
    <string name="notificationdx_label">Sensitivity:</string>
    <string name="meters">meters</string>
    <string name="locationview_selectdx_dialog_title">Notification\nsensitivity (meters)</string>
    <string name="error_locationnamealreadyexists">This Location name already exists (or existed and
		was deleted). Please choose a unique name.</string>
    <string name="msg_therearenolocationsdefined">There are no Locations defined. Would you like to
		create one now?</string>
    <string name="msg_locationremovedfromneed">Location has been removed from Need.</string>
    <string name="notification_hint">(Long-press item for disposition selections.)</string>
    <string name="need_view_button_location">Work With Locations</string>
    <string name="need_view_button_location_v2">Pick from Existing</string>
    <string name="need_view_button_location_new">New</string>
    <string name="need_menu_newlocation">New Location</string>
    <string name="need_view_button_location_search_v2">Search</string>
    <string name="troubleshootinglog">Trouble-shooting Log</string>
    <string name="alert_areyousureclearlog">Are you sure you wish to clear the log?</string>
    <string name="msg_logcleared">Log cleared</string>
    <string name="transmitlog">Send Log\nto MiBr</string>
    <string name="msg_logbeingtransmitted">Log transmitted.</string>
    <string name="ListSharing">Intelligent Reminder Networking (aka ListPlus)</string>
    <string name="networking_DialogTitleuserfriendlynames">Designate Your Own Easy-to-Remember Names</string>
    <string name="Networking_UserFriendlyPreferencesTitle">Their Nicknames</string>
    <string name="networking_describinguserfriendlyname">The Phone ID is what your networker gave you so
		that you can be of assistance to him/her. Here is where you associate
		those IDs with easy to remember names. Like the PhoneIDs screen, if
		you have multiple people you\'re working with, simply separate them
		with semi-colons (e.g.: The Boss;Sis;Betty-Jane)</string>
    <string name="networking_DialogTitlephoneid">Phone IDs of Persons Whose Lists You\'re Helping to
		Work.</string>
    <string name="Networking_PhoneIDPreferencesTitle">Their Phone IDs</string>
    <string name="networking_describingphoneid">Enter the Phone ID(s) that people have given you
		from their phone (found on Intelligent Reminder System tab. If you
		have more than one, separate them with semi-colons, just like email.
		e.g.  20013fd8f4dbc118;883228x99312 Note: you\'ll be entering
		corresponding nicknames on the next screen. </string>
</resources>