<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/businessSearch" android:title="@string/ihavelocations_menu_businesssearch"
		  android:icon="@android:drawable/ic_menu_add">
	</item>
	<item android:id="@+id/searchlocations" android:title="@string/menu_search"
		  android:icon="@android:drawable/ic_menu_search">
	</item>
	<item android:id="@+id/addlocation" android:title="@string/ihavelocations_menu_addlocation"
		  android:icon="@android:drawable/ic_menu_add">
	</item>
	<item android:id="@+id/preferences_menu" android:title="@string/menu_application_preferences"
		  android:icon="@android:drawable/ic_menu_preferences">
	</item>
	<item android:id="@+id/support_menu" android:title="Support"
		  android:icon="@drawable/ic_menu_help2">
	</item>
	
	</menu>
