<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="79sp" android:layout_height="wrap_content"
			android:text="@string/prompt_item_name" />
		<AutoCompleteTextView android:id="@+id/need_item"
			android:completionThreshold="1" android:completionHint="@string/item_autocomplete_hint"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
	</LinearLayout>
  	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="78sp" android:layout_height="wrap_content"
			android:text="@string/need_view_description_prompt" android:hint="@string/need_view_description_hint"
			android:textColorHint="#44000000" />
		<EditText android:id="@+id/need_view_description_id"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textSize="12sp">
		</EditText>
	</LinearLayout>
	<TextView android:id="@+id/TextView01" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/locations"
		android:background="@drawable/title_bar_portrait"
		android:textAppearance="@android:style/TextAppearance.WindowTitle"
		android:shadowColor="#BB000000" android:shadowRadius="2.75">
	</TextView>
  	<LinearLayout 
  		android:layout_width="fill_parent" 
  		android:layout_height="fill_parent"
  		android:orientation="vertical" >
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<ListView android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@android:id/list" />
			<TextView android:id="@+id/android:empty"
				android:layout_width="wrap_content" android:textSize="20sp"
				android:textStyle="bold" android:textColor="#44666666"
				android:layout_gravity="center" android:paddingTop="11dip"
				android:layout_height="wrap_content" android:text="@string/no_locations" />
		</LinearLayout>
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			>
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				>
				<Button android:id="@+id/location_button_confirm"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_gravity="bottom"
					android:text="@string/location_confirm">
				</Button>
				<Button android:id="@+id/location_button_cancel"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_gravity="bottom"
					android:text="@string/location_cancel">
				</Button>
			</LinearLayout>
		</LinearLayout>
  	</LinearLayout>

</LinearLayout>
